# fscord

./: .gitignore  README.md  compile.bat  compile.sh  run.sh  run_client.sh  run_server.sh
cmake/: CMakeLists.txt
data/fscord_server/: server_prikey.pem
data/server/: public.pem
libs/include/libressl/openssl/: Makefile
libs/static/libressl/: ssl-53.lib
src/basic/: basic.h  math.c  math.h  mem_arena.c  mem_arena.h  string.c  string.h  string32.c  string32.h  time.h
src/client/: asset_manager.c  asset_manager.h  assets.c  assets.h  chat.c  chat.h  config.h  crypt.c  draw.c  draw.h  font.c  font.h  fscord.c  fscord.h  login.c  login.h  math.c  math.h  net.c  net.h  netman.c  netman.h  render.c  server_connection.c  server_connection.h  session.c  session.h  sound.c  sound.h  string32_handles.c  string32_handles.h  string_handles.c  string_handles.h  ui.c  ui.h  userlist.c  userlist.h
src/client/graveyard/: gl_renderer.cpp  gl_renderer.h  lin_file.c  win32_wgl_modern.c
src/client/graveyard/win32/: win32_florilia.c  win32_net.c  win32_window.c
src/client/sys/: sys.h
src/client/sys/lin/: lin_net.c  lin_sound.c  lin_sound.h  lin_window.c  lin_window.h  sys_lin.c
src/client/sys/win32/: Win32Tcp.cpp  Win32Tcp.h  Win32Window.cpp  Win32Window.h  Win32WindowService.cpp  Win32WindowService.h  win32_fscord.cpp
src/common/: fscord_defs.h  fscord_net.h
src/crypto/: aes_gcm.c  aes_gcm.h  rsa.c  rsa.h
src/graveyard/: gl_renderer.cpp  gl_renderer.h  lin_glx_modern.c  linux_net_stream.c
src/graveyard/win32/: Win32WindowService.cpp  Win32WindowService.h  win32_florilia.c  win32_fscord.cpp  win32_network_stream.cpp  win32_window.c  win32_window.cpp
src/messages/: messages.c  messages.h
src/os/: os.h
src/os/linux/: linux_library.c  linux_memory.c  linux_net_secure_stream.c  linux_net_stream.c  linux_sound.c  linux_window.c  linux_work_queue.c
src/server/: AesGcm.cpp  AesGcm.h  ClientManager.h  EpollManager.cpp  EpollManager.h  MemoryArena.cpp  MemoryArena.h  Rsa.cpp  Rsa.h  c2s_handler.c  c2s_handler.h  client_connection.c  client_connection.h  client_connections.c  client_connections.h  client_manager.c  fscord_server.c  fscord_server.cpp  s2c_sender.c  s2c_sender.h
src/tools/: asset_generator.c
